# genee

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test.csv
.github/workflows/: cd.yml  ci.yml  continuous-integration.yml  release.yaml
docs/: database.gaphor
src/: configuration.rs  datafile.rs  graphing.rs  lib.rs  main.rs  ui.rs
src/datafile/: csv_datafile.rs  mod.rs  sqlite_datafile.rs
src/ui/: habit_day_list_widget.rs  habit_frequency_table_widget.rs  table_utils.rs  top_occurrence_list_widget.rs
test/: test.csv
