[package]
name = "genee"
version = "0.9.1"
authors = ["Lőrinc Serfőző <lorinc.serfozo@mailbox.org>"]
edition = "2021"
default-run = "genee"
description = "A habit tracker app with command-line interface"
license = "MIT"
homepage = "https://github.com/mfep/genee"
readme = "README.md"
repository = "https://github.com/mfep/genee"
categories = ["command-line-utilities"]
keywords = ["habit-tracking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.27.0"
directories-next = "2.0"
rand = "0.8.3"
ratatui = "0.27.0"
rusqlite = { version = "0.31.0", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.21"
toml = "0.8"
