[package]
name = "genee"
version = "0.9.2"
authors = ["Lőrinc Serfőző <lorinc.serfozo@mailbox.org>"]
edition = "2024"
default-run = "genee"
description = "A habit tracker app with command-line interface"
license = "MIT"
homepage = "https://github.com/mfep/genee"
readme = "README.md"
repository = "https://github.com/mfep/genee"
categories = ["command-line-utilities"]
keywords = ["habit-tracking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories-next = "2.0"
rand = "0.9"
ratatui = "0.29"
rusqlite = { version = "0.34", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
